refactor: move programming access policy to gateway
